--- a/src/css/pages/Home.less
+++ b/src/css/pages/Home.less
@@ -1,4 +1,5 @@
 @import '../GlobalVariable.less';
+@import '../components/HomeHeader.less';
 
 
 #components-layout-demo-fixed-sider .logo {
@@ -49,37 +50,5 @@
 
 .Header{
   background-color: @MenuBackgrundColor !important;
-  display: flex;
-  align-items: center;
-  padding: 0.6667vw !important;
 }
 
-.Header>div:nth-child(1){
-    width: 12vw;
-}
-
-.Header>div:nth-child(2){
-    flex: 1;
-    display: flex;
-    // align-items: center;
-    justify-content: center;
-     
-    h1{
-      color: @TitleColor;
-      font-size: @VeryBingFontSize;
-      text-shadow: .1875rem .3125rem .3125rem rgba(0,0,0,.4)
-    }
-  
-}
-
-@media screen and (max-width: 536px) {
-  .Header>div:nth-child(2) h1{
-      font-size: @BigFontSize;
-      text-shadow: .1875rem .3125rem .3125rem rgba(0,0,0,1)
-  
-}
-}
-
-.Header>div:nth-child(3){
-    width: 6.25rem;
-}
