--- a/src/css/GlobalVariable.less
+++ b/src/css/GlobalVariable.less
@@ -2,7 +2,7 @@
  
 @SmallFontSize: .75rem;  // 12px
 
-@BigFontSize:  1.25rem;   // 20px
+@BigFontSize:  1.3125rem;   // 20px
 
 @VeryBingFontSize: 1.875rem; //30 px
 
@@ -14,5 +14,6 @@
 
 @MenuColor: #00b894;
 
+@FontColor: rgba(52, 73, 94,1.0);
 
 @TitleColor: #fad390;        //React-Music
