点击最新音乐 播放歌曲

--- a/src/css/components/DiscoveryMv.less
+++ b/src/css/components/DiscoveryMv.less
@@ -1,6 +1,7 @@
 @import '../GlobalVariable.less';
 
 .container{
+    margin-bottom: 8.875rem;
     .title{
         padding: 0 0 1.25rem 2.1875rem;
         font-size: @BigFontSize;
@@ -17,7 +18,7 @@
         .item{
             width: 16vw;
             height: 10rem;
-            margin: 0 0.4vw;
+            margin: 2.8125rem .4vw;
             .img_wrap{
                 width: 100%;
                 position: relative;
