MV播放等功能完成

--- a/src/css/pages/MvDetail.less
+++ b/src/css/pages/MvDetail.less
@@ -73,6 +73,7 @@
                     .img_wrap{
                         width: 180px;
                         margin-right: 0.6667vw;
+                        cursor: pointer;
                         img{
                             width: 100%;
                             height: 100%;
